pause->seek finish

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,7 @@
         android:supportsRtl="true">
         <activity
             android:name=".MainActivity"
+            android:screenOrientation="landscape"
             android:theme="@style/lib_AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
