--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,8 +12,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true">
         <activity
-            android:name=".MainActivity"
-            android:screenOrientation="landscape"
+            android:name="test.TestEntrance"
             android:theme="@style/lib_AppTheme">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -21,6 +20,10 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name="test.seek.TestSeekTo"
+            android:screenOrientation="landscape"
+            android:theme="@style/lib_AppTheme" />
     </application>
 
 </manifest>
