--- a/build.gradle
+++ b/build.gradle
@@ -1,14 +1,13 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
 
 buildscript {
-    
+
     repositories {
         google()
         jcenter()
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.0.0-rc1'
-        
+        classpath 'com.android.tools.build:gradle:3.1.0-alpha01'
 
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
@@ -20,6 +19,9 @@ allprojects {
         google()
         jcenter()
     }
+}
+tasks.withType(JavaCompile) {
+    options.encoding = "UTF-8"
 }
 
 task clean(type: Delete) {
