修复没有回的bug

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,7 +4,7 @@ android {
     compileSdkVersion 25
     buildToolsVersion "26.0.2"
     defaultConfig {
-        applicationId "mediaplayer.yxy.mediaplayer"
+        applicationId "simple.media.player"
         minSdkVersion 15
         targetSdkVersion 25
         versionCode 1
